--- a/invoise/src/main/resources/application.properties
+++ b/invoise/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 invoice.number=58
 invoice.prefix=INV_
+server.port=80
+server.servlet.context-path=/invoise
+spring.resources.static-locations=file:D://Dev/TRAVAIL BACKEND/temp/static
