--- a/invoise/src/main/resources/application.properties
+++ b/invoise/src/main/resources/application.properties
@@ -2,4 +2,4 @@ invoice.number=58
 invoice.prefix=INV_
 server.port=80
 server.servlet.context-path=/invoise
-spring.resources.static-locations=file:D://Dev/TRAVAIL BACKEND/temp/static
+spring.resources.static-locations=file:D://Dev/TRAVAIL BACKEND/temp/static/
