--- a/invoise-web/invoise-web/src/main/resources/application.properties
+++ b/invoise-web/invoise-web/src/main/resources/application.properties
@@ -3,3 +3,8 @@ invoice.prefix=INV_
 server.port=3000
 server.servlet.context-path=/invoise
 #spring.resources.static-locations=classpath:/static/html
+
+spring.datasource.url=jdbc:mysql://localhost:3306/invoise
+spring.datasource.username=root
+#spring.datasource.password=""
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
