--- a/customer/customer/pom.xml
+++ b/customer/customer/pom.xml
@@ -21,6 +21,12 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.myCompany.invoise</groupId>
+			<artifactId>core</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
